Small improvements for readability and remove of deprecated apis